added lect9 homework

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /Lecture8/.idea
 /Lecture8/target
 /Lecture8/src/main
+/Lecture9/.idea
+/Lecture9/target
+/Lecture9/src/main
+/Lecture9/Lecture9.iml
